--- a/index.html
+++ b/index.html
@@ -8,30 +8,65 @@
   </head>
 
   <body>
-    <div class="navbar">
-
+    <div class="header">
+      <div class="left-links">Header Logo</div>
+      <div class="right-links">
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
+      </div>
     </div>
 
     <div class="main">
-      <div class="">
-
+      <div class="intro">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
+        <button>Sign up</button>
+        <div class="placeholder-images">
+          <p>this is a place holder for an image</p>
+        </div>
       </div>
   
-      <div class="">
-  
+      <div class="info">
+        <h2>Some random information.</h2>
+        <div class="subtext">
+          <div class="image-box"></div>
+          <p class="text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="subtext">
+          <div class="image-box"></div>
+          <p class="text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="subtext">
+          <div class="image-box"></div>
+          <p class="text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="subtext">
+          <div class="image-box"></div>
+          <p class="text">this is some subtext under an illustration or image</p>
+        </div>
       </div>
   
-      <div class="">
-  
+      <div class="quotes">
+        <p class="qoute">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="author">- Thor, God of Thunder</p>
       </div>
   
-      <div class="">
-  
+      <div class="call-to-action">
+        <div class="modal">
+          <div class="modal-text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+          </div>
+          <button>Sign up</button>
+        </div>
       </div>
     </div>
 
     <div class="footer">
-
+      <p>Copyright - The Odin Project 2023</p>
     </div>
   </body>
 </html>
