Tweak index.html and add visual css styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
       <div class="links">
-        <div class="left-links"><a href="#">Header Logo</a></div>
+        <div class="left-links logo"><a href="#">Header Logo</a></div>
         <div class="right-links">
           <ul>
             <li><a href="#">header link one</a></li>
@@ -23,8 +23,8 @@
       <div class="hero">
         <h1>This website is awesome</h1>
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
-        <button>Sign up</button>
-        <div class="placeholder-images">
+        <button class="button">Sign up</button>
+        <div class="placeholder-image">
           <p>this is a place holder for an image</p>
         </div>
       </div>
@@ -51,8 +51,12 @@
     </div>
 
     <div class="quotes">
-      <p class="qoute">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-      <p class="author">- Thor, God of Thunder</p>
+      <p id="quote-text">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+      </p>
+      <p id="author">
+        - Thor, God of Thunder
+      </p>
     </div>
 
     <div class="call-to-action">
@@ -61,7 +65,7 @@
           <h3>Call to action! It's time!</h3>
           <p>Sign up for our product by clicking that button right over there!</p>
         </div>
-        <button>Sign up</button>
+        <button class="button">Sign up</button>
       </div>
     </div>
 
