Add flexbox css to header class of index.html
Tweak index.html to re-arrange the header section to add flexbox layout
css styling.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
       <div class="links">
-        <div class="left-links logo"><a href="#">Header Logo</a></div>
+        <div class="left-links"><a href="#" id="logo">Header Logo</a></div>
         <div class="right-links">
           <ul>
             <li><a href="#">header link one</a></li>
@@ -21,11 +21,15 @@
       </div>
 
       <div class="hero">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
-        <button class="button">Sign up</button>
-        <div class="placeholder-image">
-          <p>this is a place holder for an image</p>
+        <div class="hero-left">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast.</p>
+          <button class="button">Sign up</button>
+        </div>
+        <div class="hero-right">
+          <div class="placeholder-image">
+            <p>this is a place holder for an image</p>
+          </div>
         </div>
       </div>
     </div>
