--- a/index.html
+++ b/index.html
@@ -36,21 +36,24 @@
 
     <div class="info">
       <h2>Some random information.</h2>
-      <div class="subtext">
-        <div class="image-box"></div>
-        <p class="text">this is some subtext under an illustration or image</p>
-      </div>
-      <div class="subtext">
-        <div class="image-box"></div>
-        <p class="text">this is some subtext under an illustration or image</p>
-      </div>
-      <div class="subtext">
-        <div class="image-box"></div>
-        <p class="text">this is some subtext under an illustration or image</p>
-      </div>
-      <div class="subtext">
-        <div class="image-box"></div>
-        <p class="text">this is some subtext under an illustration or image</p>
+
+      <div class="info-boxes">
+        <div class="box">
+          <div class="box-image"></div>
+          <p class="box-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box">
+          <div class="box-image"></div>
+          <p class="box-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box">
+          <div class="box-image"></div>
+          <p class="box-text">this is some subtext under an illustration or image</p>
+        </div>
+        <div class="box">
+          <div class="box-image"></div>
+          <p class="box-text">this is some subtext under an illustration or image</p>
+        </div>
       </div>
     </div>
 
