Add flexbox css to call-to-action class of index
Tweak index.html to re-arrange the call-to-action section to add flexbox layout
css styling.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
           <h3>Call to action! It's time!</h3>
           <p>Sign up for our product by clicking that button right over there!</p>
         </div>
-        <button class="button">Sign up</button>
+        <div class="modal-button">
+          <button class="button">Sign up</button>
+        </div>
       </div>
     </div>
 
