--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p id="quote-text">
         This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
       </p>
-      <p id="author">
+      <p id="quote-author">
         - Thor, God of Thunder
       </p>
     </div>
@@ -79,7 +79,7 @@
     </div>
 
     <div class="footer">
-      <p>Copyright - The Odin Project 2023</p>
+      <p>Copyright &copy; The Odin Project 2023</p>
     </div>
   </body>
 </html>
